<resources>
    <string name="app_name">UrbanGame</string>
    <string name="title_room_detail">Room Detail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="facebook_app_id">956582571136380</string>
    <string name="FIREBASE_URL">https://urbangame-4f82c.firebaseio.com/</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings">Settings</string>
    <string name="searchable">Searchable</string>
    <string name="menu_search">Search</string>
    <string name="menu_create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="create_room">Create Room</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_checkpoints">Set Checkpoints</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="passwords_unmatching">Both passwords fields must match and contain at least 6 characters</string>
    <string name="fields_unfilled">You have to fill all the fields to proceed</string>
    <string name="registration_successful">User Registrated, you can now log in</string>

    <string name="accept">accept</string>
    <string name="action_logout">Logout</string>
    <string name="game_start">Start of Game</string>
    <string name="game_end">End of Game</string>
    <string name="auth_failed">auth failed</string>
    <string name="profile">Profile</string>
    <string name="profile_updated">profile updated</string>
    <string name="markers">Markers</string>
    <string name="hint">Hint</string>
    <string name="name_label">Name:</string>
    <string name="description_label">Description:</string>
    <string name="join_room">Join Room</string>
    <string name="user_photo_uploaded">picture uploaded</string>
    <string name="user_photo_upload_fail">failed to upload a photo</string>
    <string name="registration_failed">failed to register</string>
    <string name="automatic_login_key">Automatic Login</string>
    <string name="pref_title_authomatic_login">Automatic Login</string>
    <string name="pref_summary_automatic_login">Enable to login automatically after first successful login</string>
    <string name="current_hint_label">Current Hint:</string>
</resources>
